--- a/nbs/test/test_data_handling.ipynb
+++ b/nbs/test/test_data_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "parameters"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,20 +60,24 @@
     "\n",
     "\n",
     "def scalar(int_param: int, float_param: float, str_param: str):\n",
-    "    print((int_param, float_param, str_param))\n",
+    "    print(f'int_param: {int_param}')\n",
+    "    print(f'float_param: {float_param}')\n",
+    "    print(f'str_param: {str_param}')\n",
     "    return int_param, float_param, str_param"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 1.1, 'Sciflow 🔬')\n"
+      "int_param: 3\n",
+      "float_param: 1.1\n",
+      "str_param: Sciflow 🔬\n"
      ]
     },
     {
@@ -82,7 +86,7 @@
        "(3, 1.1, 'Sciflow 🔬')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,23 +105,23 @@
     "\n",
     "\n",
     "def py_advanced(input_path: Path, list_param: List[int], dict_param: Dict[str, Any]):\n",
-    "    print(input_path)\n",
-    "    print(list_param[:10])\n",
-    "    print(dict_param)"
+    "    print(f'input_path: {input_path}')\n",
+    "    print(f'input_path: {list_param[:10]}')\n",
+    "    print(f'input_path: {dict_param}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/git/sciflow/nbs/test\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "{'a': {'b': {'c': 'abc'}}, 'another_key': [1, 2, 3]}\n"
+      "input_path: /home/jovyan/git/sciflow/nbs/test\n",
+      "input_path: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "input_path: {'a': {'b': {'c': 'abc'}}, 'another_key': [1, 2, 3]}\n"
      ]
     }
    ],
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +139,34 @@
     "\n",
     "\n",
     "def pandas(series: pd.Series, df: pd.DataFrame):\n",
-    "    print(series.shape)\n",
-    "    print(df.shape)"
+    "    print(f'series: {series.shape}')\n",
+    "    print(f'df: {df.shape}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "series: (10000000,)\n",
+      "df: (10000000, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pandas(series_param, df_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
