--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "import os\n",
     "import subprocess\n",
-    "from pathlib import Path\n",
+    "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
     "\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps"
+    "from sciflow.parse_module import FuncDetails, extract_steps\n",
+    "from sciflow.data_handler import extract_param_meta"
    ]
   },
   {
@@ -43,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -53,14 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,53 +279,106 @@
     "):\n",
     "    if not os.path.exists(flow_path.parent):\n",
     "        os.mkdir(flow_path.parent)\n",
+    "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
+    "    param_meta = extract_param_meta(fq_module_name, params)\n",
     "    with open(flow_path, \"w\") as flow_file:\n",
     "        flow_file.write(\"# SCIFLOW GENERATED FILE - DO NOT EDIT\\n\")\n",
-    "        flow_file.write(\"from metaflow import FlowSpec, step, Parameter\\n\")\n",
+    "        has_mf_param = any((p.has_metaflow_param for p in param_meta.values()))\n",
+    "        has_json_param = any((p.is_json_type for p in param_meta.values()))\n",
+    "        mf_params_import = \"from metaflow import FlowSpec, step\"\n",
+    "        if has_mf_param:\n",
+    "            mf_params_import += \", Parameter\"\n",
+    "        if has_json_param:\n",
+    "            mf_params_import += \", JSONType\"\n",
+    "            flow_file.write('import json\\n')\n",
+    "        flow_file.write(mf_params_import + '\\n')\n",
     "        flow_file.write(\n",
-    "            f\"from {lib_name}.{module_name} import {', '.join(orig_step_names)}\\n\"\n",
+    "            f\"from {fq_module_name} import {', '.join(orig_step_names)}\\n\"\n",
     "        )\n",
     "        flow_file.write(\n",
-    "            f\"from {lib_name}.{module_name} import {', '.join(params.keys())}\\n\"\n",
+    "            f\"from {fq_module_name} import {', '.join(params.keys())}\\n\"\n",
     "        )\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
     "        single_indent = \"    \"\n",
-    "        for param in params.keys():\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
-    "            )\n",
+    "        for param in param_meta.keys():\n",
+    "            if param_meta[param].is_scalar:\n",
+    "                flow_file.write(\n",
+    "                    f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
+    "                )\n",
+    "            elif param_meta[param].is_json_type:\n",
+    "                flow_file.write(\n",
+    "                    f\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
+    "                )\n",
+    "            elif param_meta[param].instance_type == PosixPath:\n",
+    "                flow_file.write(\n",
+    "                    f\"{single_indent}{param} = Parameter('{param}', default=str({param}), type=JSONType)\\n\"\n",
+    "                )\n",
     "\n",
     "        flow_file.write(\"\\n\")\n",
-    "        for i, step in enumerate(steps):\n",
-    "            flow_file.write(f\"{single_indent}@step\\n\")\n",
-    "            flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
-    "            if step.docstring:\n",
-    "                flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
-    "            # Check for padded step\n",
-    "            if i < len(orig_step_names):\n",
-    "                flow_step_args = \"\"\n",
-    "                if len(step.args) > 0:\n",
-    "                    flow_step_args = \", \".join(\n",
-    "                        [\"self.\" + a for a in step.args.split(\",\")]\n",
-    "                    )\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
-    "                )\n",
-    "            else:\n",
-    "                flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
-    "            if i < len(steps) - 1:\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\"\n",
-    "                )\n",
-    "            flow_file.write(\"\\n\")\n",
-    "\n",
+    "        write_steps(flow_file, steps, orig_step_names, single_indent)\n",
+    "    \n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
     "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_data_handling.ipynb\")\n",
+    "params = params_as_dict(nb_path)\n",
+    "param_meta = extract_param_meta(\"sciflow.test.test_data_handling\", params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(any((p.has_metaflow_param for p in param_meta.values())))\n",
+    "assert(any((p.is_json_type for p in param_meta.values())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def write_steps(flow_file, steps, orig_step_names, single_indent):\n",
+    "    for i, step in enumerate(steps):\n",
+    "        flow_file.write(f\"{single_indent}@step\\n\")\n",
+    "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
+    "        if step.docstring:\n",
+    "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
+    "        # Check for padded step\n",
+    "        if i < len(orig_step_names):\n",
+    "            flow_step_args = \"\"\n",
+    "            if len(step.args) > 0:\n",
+    "                flow_step_args = \", \".join(\n",
+    "                    [\"self.\" + a for a in step.args.split(\",\")]\n",
+    "                )\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
+    "            )\n",
+    "        else:\n",
+    "            flow_file.write(f\"{single_indent}{single_indent}pass\\n\")\n",
+    "        if i < len(steps) - 1:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{single_indent}self.next(self.{steps[i+1].name})\\n\"\n",
+    "            )\n",
+    "        flow_file.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,45 +393,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "flow_path = Path(\n",
-    "    os.path.join(Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path)}.py\")\n",
+    "    os.path.join(Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path).split('.')[-1]}.py\")\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Path('/home/jovyan/git/sciflow/nbs/test/flows/test.test_export.py')"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "flow_path"
+    "assert(Path('/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py') == flow_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test.test_export.py\n"
+     "ename": "AttributeError",
+     "evalue": "'Param' object has no attribute 'instance_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-179-1f53024e31a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnb_to_metaflow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnb_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflow_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msilent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-168-11fbe205db3b>\u001b[0m in \u001b[0;36mnb_to_metaflow\u001b[0;34m(nb_path, flow_path, silent)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0morig_step_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     )\n\u001b[1;32m     36\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msilent\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-172-bb72045952e1>\u001b[0m in \u001b[0;36mwrite_module_to_file\u001b[0;34m(flow_path, flow_class_name, lib_name, module_name, orig_step_names, steps, params)\u001b[0m\n\u001b[1;32m     43\u001b[0m                     \u001b[0;34mf\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 )\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0;32melif\u001b[0m \u001b[0mparam_meta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mPosixPath\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m                 flow_file.write(\n\u001b[1;32m     47\u001b[0m                     \u001b[0;34mf\"{single_indent}{param} = Parameter('{param}', default=str({param}), type=JSONType)\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Param' object has no attribute 'instance_type'"
      ]
     }
    ],
@@ -390,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,17 +471,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
-      "Converted test_pandas_numpy.ipynb to TestPandasNumpyFlow in: test_pandas_numpy.py\n",
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gensim.summarization.textcleaner:'pattern' package found; tag filters are available for English\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Converted test_top2vec.ipynb to TestTop2VecFlow in: test_top2vec.py\n",
-      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n"
+      "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
      ]
     }
    ],
@@ -438,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -509,15 +575,21 @@
      "text": [
       "Flow: test_module.py verified\n",
       "Flow: test.test_export.py verified\n",
-      "Flow: test_top2vec.py verified\n",
-      "Flow: test_pandas_numpy.py verification failed\n",
+      "Flow: test_data_handling.py verification failed\n",
       "Details:\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/jovyan/git/sciflow/nbs/test/flows/test_pandas_numpy.py\", line 3, in <module>\n",
-      "    from sciflow.test.test_pandas_numpy import first, preprocess, train, last\n",
-      "  File \"/home/jovyan/git/sciflow/sciflow/test/test_pandas_numpy.py\", line 13, in <module>\n",
-      "    some_params = pd.Series([1, 2, 3])\n",
-      "NameError: name 'pd' is not defined\n",
+      "  File \"/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py\", line 35, in <module>\n",
+      "    TestDataHandlingFlow()\n",
+      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/flowspec.py\", line 77, in __init__\n",
+      "    from . import cli\n",
+      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 467, in <module>\n",
+      "    def init(obj, run_id=None, task_id=None, tags=None, **kwargs):\n",
+      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/parameters.py\", line 232, in wrapper\n",
+      "    cmd.params.insert(0, click.Option(('--' + arg.name,), **kwargs))\n",
+      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1736, in __init__\n",
+      "    flag_value = not self.default\n",
+      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
+      "Flow: test_top2vec.py verified\n",
       "Flow: test_export.py verified\n"
      ]
     }
@@ -528,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
